# debt_automation

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.bat  start_app.bat  web_app.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json
artifacts/demo-showcase/: completion-report.md  demo-readiness-audit.md  research-and-showcase-plan.md  story-script-storyboard.md
artifacts/fable/: f002-baseline-verification-report.md  fable-demo.md  fable-tour-plan.md  post-feedback-decision-framework.md
contracts/: engine-api.openapi.yaml
data/: benchmark_questions.json
deploy/: docker-entrypoint.sh
docs/: pilot_guide.md
docs/implementation/: architecture_decisions.md  coderabbit_review_prompt.md  excel_verification_pack_decision.md  excel_verification_pack_pdr.md  financial_model_foundation.md  live_demo_deploy_and_scope_change.md  live_demo_handoff_checklist.md  live_demo_runbook.md  phase0_phase1_backlog.md  production_system_master_prompt.md  prototype_decision.md  real_document_authorization.md  web_persistence_foundation.md
docs/phase-1/: README.md  baseline_task.md  contrarian_review.md  decision_record.md  evidence_log_template.csv  facilitator_scorecard.md  outreach_questions.md  outreach_tracker_template.csv  participant_invitation.md  (+5 more)
scripts/: New-Phase1Session.ps1  Test-Phase1.ps1  Test-ReviewerPackCitations.ps1
supabase/: README.md
tests/: Test-Phase1.ps1  test_engine_api.py  test_excel_pack.py  test_financial_model.py  test_system.py
(+99 files in other folders)
