[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agreement-intelligence"
version = "0.1.0"
description = "Local synthetic agreement-intelligence prototype"
requires-python = ">=3.11"
dependencies = ["pypdf>=5.0", "openpyxl>=3.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
